--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
 
   <!-- Highlight -->
-  <link href="//apps.bdimg.com/libs/highlight.js/9.1.0/styles/default.min.css" rel="stylesheet">
-  
+  <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-bash.min.js"></script>
+
 </head>
 <body>
   <div id="app">Loading...</div>
