--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
       repo: '',
       coverpage: false,
       loadSidebar: true,
-      loadNavbar: true
+      loadNavbar: true,
+      search: 'auto'
     }
   </script>
   <!-- Docsify v4 -->
