--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
   <!-- Highlight -->
   <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-bash.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-go.min.js"></script>
 
 </head>
 <body>
