--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
       loadNavbar: true,
       search: 'auto',
       sidebarDisplayLevel: 1,
+      alias: {
+        '/.*/_sidebar.md': '/_sidebar.md'
+      }
     }
   </script>
   <!-- Docsify v4 -->
