--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
       search: 'auto',
       sidebarDisplayLevel: 1,
       alias: {
-        '/.*/_sidebar.md': '/_sidebar.md'
+        '/.*/_sidebar.md': '/_sidebar.md',
+        '/.*/_navbar.md': '/_navbar.md'
       }
     }
   </script>
