--- a/index.html
+++ b/index.html
@@ -52,5 +52,13 @@
   <script src="//cdn.jsdelivr.net/npm/pseudocode@latest/build/pseudocode.min.js"></script>
   <script src="//cdn.jsdelivr.net/gh/h-hg/docsify-pseudocode/dist/docsify-pseudocode.min.js"></script>
 
+  <!-- refresh page when change markdown file. -->
+  <script>   
+    window.onhashchange = function(event){
+    if(event.newURL.split('#')[0] !== event.oldURL.split('#')[0]) {
+      location.reload()
+    }
+  }
+  </script>
 </body>
 </html>
