--- a/index.html
+++ b/index.html
@@ -55,10 +55,12 @@
   <!-- refresh page when change markdown file. -->
   <script>   
     window.onhashchange = function(event){
-    if(event.newURL.split('#')[0] !== event.oldURL.split('#')[0]) {
-      location.reload()
+      if(event.newURL.split('#')[0] !== event.oldURL.split('#')[0]) {
+        location.reload()
+      }
+      alert(event.newURL)
+      alert(event.oldURL)
     }
-  }
   </script>
 </body>
 </html>
