--- a/index.html
+++ b/index.html
@@ -56,10 +56,9 @@
   <script>   
     window.onhashchange = function(event){
       if(event.newURL.split('#')[0] !== event.oldURL.split('#')[0]) {
+        alert('reload')
         location.reload()
       }
-      alert(event.newURL)
-      alert(event.oldURL)
     }
   </script>
 </body>
