--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       loadNavbar: true,
       search: 'auto',
       sidebarDisplayLevel: 1,
+      executeScript: true,
       alias: {
         '/.*/_sidebar.md': '/_sidebar.md',
         '/.*/_navbar.md': '/_navbar.md'
@@ -53,14 +54,12 @@
   <script src="//cdn.jsdelivr.net/gh/h-hg/docsify-pseudocode/dist/docsify-pseudocode.min.js"></script>
 
   <!-- refresh page when change markdown file. -->
-  <script>   
+  <!-- <script>   
     window.onhashchange = function(event){
       if(event.newURL.split('#')[0] !== event.oldURL.split('#')[0]) {
         location.reload()
       }
-      alert(event.newURL.split('#')[0])
-      alert(event.oldURL.split('#')[0])
     }
-  </script>
+  </script> -->
 </body>
 </html>
