--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
       loadNavbar: true,
       search: 'auto',
       sidebarDisplayLevel: 1,
-      executeScript: true,
       alias: {
         '/.*/_sidebar.md': '/_sidebar.md',
         '/.*/_navbar.md': '/_navbar.md'
@@ -54,12 +53,12 @@
   <script src="//cdn.jsdelivr.net/gh/h-hg/docsify-pseudocode/dist/docsify-pseudocode.min.js"></script>
 
   <!-- refresh page when change markdown file. -->
-  <!-- <script>   
+  <script>   
     window.onhashchange = function(event){
-      if(event.newURL.split('#')[0] !== event.oldURL.split('#')[0]) {
+      if(event.newURL.split('?')[0] !== event.oldURL.split('?')[0]) {
         location.reload()
       }
     }
-  </script> -->
+  </script>
 </body>
 </html>
