--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       loadNavbar: true,
       search: 'auto',
       sidebarDisplayLevel: 1,
+      executeScript: true,
       alias: {
         '/.*/_sidebar.md': '/_sidebar.md',
         '/.*/_navbar.md': '/_navbar.md'
