--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
   <script src="//cdn.jsdelivr.net/gh/h-hg/docsify-pseudocode/dist/docsify-pseudocode.min.js"></script>
 
   <!-- refresh page when change markdown file. -->
-  <script>   
+  <!-- <script>   
     window.onhashchange = function(event){
       if(event.newURL.split('?')[0] !== event.oldURL.split('?')[0]) {
         location.reload()
       }
     }
-  </script>
+  </script> -->
 </body>
 </html>
