--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify-sidebar-collapse/dist/sidebar-folder.min.css" />
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/pseudocode@latest/build/pseudocode.min.css">
+  <link rel="stylesheet" href="/_docsify/docsify@4/lib/themes/vue.css">
+  <link rel="stylesheet" href="/_docsify/docsify-sidebar-collapse/dist/sidebar-folder.min.css" />
+  <link rel="stylesheet" href="/_docsify/pseudocode@latest/build/pseudocode.min.css">
 </head>
 <body>
   <div id="app">Loading...</div>
@@ -31,13 +31,13 @@
   </script>
   
   <!-- Docsify v4 -->
-  <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
-  <script src="//cdn.jsdelivr.net/npm/docsify-sidebar-collapse/dist/docsify-sidebar-collapse.min.js"></script>
+  <script src="/_docsify/docsify@4.js"></script>
+  <script src="/_docsify/docsify-sidebar-collapse/dist/docsify-sidebar-collapse.min.js"></script>
 
   <!-- Highlight -->
-  <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-bash.min.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-go.min.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-c.min.js"></script>
+  <script src="/_docsify/prismjs@1/components/prism-bash.min.js"></script>
+  <script src="/_docsify/prismjs@1/components/prism-go.min.js"></script>
+  <script src="/_docsify/prismjs@1/components/prism-c.min.js"></script>
 
   <!-- Latex support -->
   <script src='//cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-AMS_CHTML'></script>
@@ -51,9 +51,8 @@
       }
     });
   </script>
-  <script src="//cdn.jsdelivr.net/npm/pseudocode@latest/build/pseudocode.min.js"></script>
-  <script src="//cdn.jsdelivr.net/gh/h-hg/docsify-pseudocode/dist/docsify-pseudocode.min.js"></script>
-
+  <script src="/_docsify/pseudocode@latest/build/pseudocode.min.js"></script>
+  <script src="/_docsify/gh/h-hg/docsify-pseudocode/dist/docsify-pseudocode.min.js"></script>
   <!-- refresh page when change markdown file. -->
   <!-- <script>   
     window.onhashchange = function(event){
